@@ -26,6 +26,7 @@
 	- "Inverted" flag ignored in event processing policy if event or object list is empty
 	- Object tools can be filtered by custom attribute presence
 	- Configurable list of external URLs for each object
+	- Sound for outstanding alarm reminder can be configured
 - Fixed issues: NX-60, NX-630, NX-916, NX-1123, NX-1129, NX-1151, NX-1161, NX-1165, NX-1171, NX-1174, NX-1178, NX-1188, NX-1190, NX-1191, NX-1192, NX-1193, NX-1197, NX-1198, NX-1213, NX-1216
 
 
